@@ -4,7 +4,7 @@ MojoX::Linda - Plausibly helpful (and probably drunk) wrapper around morbo
 
 # VERSION
 
-version 1.01
+version 1.02
 
 [![test](https://github.com/gryphonshafer/MojoX-Linda/workflows/test/badge.svg)](https://github.com/gryphonshafer/MojoX-Linda/actions?query=workflow%3Atest)
 [![codecov](https://codecov.io/gh/gryphonshafer/MojoX-Linda/graph/badge.svg)](https://codecov.io/gh/gryphonshafer/MojoX-Linda)
